UPDATE - update swagger - create rule validation base64
